...
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playground.OutputFragment"
    android:id="@+id/fragment_output_root">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

...
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/playgroundStdout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/playground_stdout_hint"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/code_text_color"
                    android:textColorHint="@color/code_text_color"
...
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/playgroundStderr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/playground_stderr_hint"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@android:color/holo_red_light"
                    android:textColorHint="@android:color/holo_red_light"
...
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/playgroundExitCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/playground_exit_code_hint"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/code_text_color"
                    android:textColorHint="@color/code_text_color"
...
