...
    <string name="playground_stdout_info">Everything your program writes to the standard output (System.out) appears here.</string>
    <string name="playground_stdout_hint">Nothing on System.out</string>
    <string name="playground_stderr_info">Everything your program writes to the standard error channel (System.err) appears here, including exceptions.</string>
    <string name="playground_stderr_hint">Nothing on System.err</string>
    <string name="playground_exit_code_info">Exit code information. An exit code of 0 means success, all other values indicate some error.</string>
    <string name="playground_exit_code_hint">No exit code.</string>
    <string name="playground_in_progress">Compiling and running…</string>
    <string name="playground_401_code">Error: failed authorization.</string>
    <string name="playground_500_code">Error: internal server error.</string>
    <string name="playground_misc_code">Error: unknown error with code %1$s</string>
    <string name="playground_timeout">Error: the connection timed out.</string>
    <string name="playground_countdown">Please wait a bit before sending code to run again.</string>
    <string name="playground_countdown_over">You can now run the program again.</string>
    <string name="playground_info">
        You can create and run simple programs here. Please note that this has limitations and is not
        nearly as powerful as a development environment on a PC.
    </string>
    <string name="playground_dont_show_again">Don\'t show this again.</string>
    <string name="playground_no_connection">An internet connection is required to run the program.</string>
    <string name="playground_powered_by">Java running powered by:</string>
...
