<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/playground_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity=".LearnJavaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarPlayground"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/settings_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:onClick="settingsOnClick"
                    android:backgroundTint="?android:colorPrimary"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/action_settings"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin"
                    android:src="@drawable/settings_icon" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Actual content of the activity -->
    <RelativeLayout
        android:id="@+id/playground_content_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".playground.PlaygroundActivity"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/playgroundTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            tools:visibility="visible"
            android:visibility="gone"/>

        <!-- Everything else is managed with fragments by this view pager. -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/playgroundViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/playgroundTabLayout"
            tools:visibility="visible"
            android:visibility="gone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playgroundRunButton"
            android:contentDescription="@string/playground_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin"
            app:srcCompat="@drawable/icon_run"
            app:borderWidth="0dp"
            app:backgroundTint="?colorAccent"
            app:tint="@android:color/black"
            app:rippleColor="@android:color/white"
            app:fabSize="normal"
            tools:visibility="visible"
            android:visibility="gone"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>