<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/playground_info"
        android:textSize="@dimen/small_text_size"/>

    <TextView
        android:id="@+id/dialogPoweredByTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Powered by: Glot.io"
        android:textStyle="bold"
        android:textSize="@dimen/medium_text_size"
        android:textAlignment="center"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/playgroundInfoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/small_text_size"
        android:text="@string/playground_dont_show_again"/>

</LinearLayout>